<resources>
    <string name="app_name">Delivery</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_account">Create account</string>
    <string name="already_an_user">Already an user??</string>
    <string name="sign_in">Sign-in</string>
    <string name="enter_password_again">Enter Password again</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password:</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone">Phone:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="courier">Courier</string>
    <string name="Courier">Courier</string>
    <string name="dhaka">Dhaka</string>
    <string name="khulna">Khulna</string>
    <string name="barishal">Barishal</string>
    <string name="chittagong">Chittagong</string>
    <string name="cumilla">Cumilla</string>
    <string name="rajshahi">Rajshahi</string>
    <string name="madaripur">Madaripur</string>
    <string name="sylhet">Sylhet</string>
    <string name="banasree" />
    <string name="please_log_in_here">Please log in here</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account??</string>
    <string name="register">Register</string>
    <string name="admin">Admin??</string>
    <string name="ccourier">Courier</string>
    <string name="view_employee_details">view employee details</string>
    <string name="view_coverage_area">view coverage area</string>
    <string name="view_pickup_request">view pickup request</string>
    <string name="profile">Profile</string>
    <string name="admin_id_2176">Admin ID: 2176</string>
    <string name="username_admin">Username: Admin</string>
    <string name="ourier">courier</string>
</resources>