<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Panel">

    <TextView
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/courier"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/t1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/outline"
            android:padding="15dp"
            android:text="@string/username_admin"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/t1"
            android:background="@drawable/outline"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/admin_id_2176"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            android:layout_below="@+id/t1"
            android:padding="10dp"
            android:text="@string/profile"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r1"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_pickup_request"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:layout_below="@+id/b1"
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_coverage_area"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:layout_below="@+id/b2"
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_employee_details"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="labeled"
        app:itemTextColor="@color/black"
        app:menu="@menu/item_menu"/>

</RelativeLayout>